<resources>
    <string name="app_name" translatable="false">ConversationalIST</string>
    <string name="temp_images_dir" translatable="false">temp_images</string>
    <string name="temp_image" translatable="false">temp_image.jpg</string>
    <string name="authorities" translatable="false">pt.ulisboa.tecnico.cmov.conversationalist.fileprovider</string>
    <string name="preference_file_key" translatable="false">pt.ulisboa.tecnico.cmov.conversationalist.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="chat_message_hint">Write your message here</string>
    <string name="create_new_chatroom">Create a new chatroom</string>
    <string name="join_new_chatroom">Join a new chatroom</string>
    <string name="joined_chatrooms">Joined Chatrooms</string>
    <string name="enter_chatroom_name">Enter chatroom name</string>
    <string name="enter_password">Enter password</string>
    <string name="create_chatroom">Create chatroom</string>
    <string name="available_chatrooms">Available Chatrooms</string>
    <string name="enter_username">Enter username</string>
    <string name="register">register</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="pick_location">Pick Location</string>
    <string name="radius">Radius (m)</string>
    <string name="leave_room">Leave Room</string>
</resources>