<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListChatroomsActivity">

    <ListView
        android:id="@+id/chatroomsListView"
        android:layout_width="353dp"
        android:layout_height="457dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/goCreateChatroomButton"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="63dp"
        android:onClick="onCreateChatroom"
        android:text="@string/create_new_chatroom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatroomsListView" />

    <Button
        android:id="@+id/goJoinChatroomButton"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="63dp"
        android:onClick="onJoinChatroom"
        android:text="@string/join_new_chatroom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goCreateChatroomButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="148dp"
        android:text="@string/joined_chatrooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>